# codegen

./: Cargo.toml  Justfile  README.md
.github/workflows/: tests.yml
examples/: class.rs  complete.php  complete.rs  simple.php  simple.rs
src/: attribute.rs  body.rs  class.rs  comment.rs  constant.rs  data_type.rs  enum.rs  enum_case.rs  file.rs  function.rs  interface.rs  lib.rs  literal.rs  method.rs  modifiers.rs  parameter.rs  property.rs  trait.rs  usage.rs
tests/: complete.php  complete.rs
